[package]
name = "wgpu-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.3", features = ["rwh_05"] }
log = "0.4"
wgpu = "0.18.0"
env_logger = "0.10"
pollster = "0.3.0"
rand = "0.8.5"
bytemuck = { version = "1.14.0", features = ["derive"] }
